edit index.html and css file for hero text and placeholder image with flex

--- a/index.html
+++ b/index.html
@@ -8,22 +8,24 @@
     <title>Landing Page</title>
 </head>
 <body>
-    <div class="header">
-        <div class="logo">
-            <p>Header Logo</p>
+    <header>
+        <div class="header">
+            <div class="logo">
+                <p>Header Logo</p>
+            </div>
+            <div class="links">
+                <div class=link>
+                    <a href="../landing-page/products.html">Products</a>
+                </div>
+                <div class="link">
+                    <a href="../landing-page/about.html">About</a>
+                </div>
+                <div class="link">
+                    <a href="../landing-page/contact.html">Contact Us</a>
+                </div>
         </div>
-        <div class="links">
-            <div class=link>
-                <a href="../landing-page/products.html">Products</a>
-            </div>
-            <div class="link">
-                <a href="../landing-page/about.html">About</a>
-            </div>
-            <div class="link">
-                <a href="../landing-page/contact.html">Contact Us</a>
-            </div>
-        </div>
-    </div>
+    </header>
+    <div class="hero">
         <div class="herotext">
             <div class="heading">
                 <p>This website is awesome</p>
@@ -33,8 +35,8 @@
             </div>
             <div class="signup">
                 <p>Sign up</p>
-            </div>    
             </div>
+        </div>    
         <div class="heroimage">
             <p>This is a placeholder for an image</p>
         </div>
