--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <p>This website is awesome</p>
             </div>
             <div class="herop">
-                <p>This website has some subtext that goes under the main title. It's a smaller font and the color is lower contracts</p>           
+                <p>This website has some subtext that goes under the main title. It's a smaller font and the color is lower contrast.</p>           
             </div>
             <div class="signup">
                 <p>Sign up</p>
