edit index.html file

--- a/index.html
+++ b/index.html
@@ -41,5 +41,42 @@
             <p>This is a placeholder for an image</p>
         </div>
     </div>
+    <div class="section3">
+        <h1>Heading Section 3</h1>
+    </div>
+    <div class="pictures">
+        <div class="picture">
+            <img src="" alt="" description="" title="">
+        </div>
+        <div class="picture">
+            <img src="" alt="" description="" title="">
+        </div>
+        <div class="picture">
+            <img src="" alt="" description="" title="">
+        </div>
+    </div>
+    <div class="empty">
+
+    </div>
+    <div class="quote">
+        <div class="testimonial">
+            <p>"This is a testimonial or quotation of someone important. Who? I don't know."</p>
+        </div>
+        <div class="author">
+            <p>-Someone Important</p>
+        </div>
+    </div>
+    <div class="banner">
+        <div class="CTA">
+            <p>Call to Action! It's time!</p>
+        </div>
+        <div class="CTAtext">
+            <p>Sign up and join now! You don't have much time. Only now, because at any moment, you may die.</p>
+        </div>
+        <div class="signup2">
+            <p>Sign up</p>
+        </div>
+    </div>
+    <footer>Copyright @ Doherty Landing Pages 2023</footer>
 </body>
 </html>
