Edit css and index

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </div>
     <div class="quote">
         <div class="testimonial">
-            <p>"This is a testimonial or quotation of someone important. Who? I don't know."</p>
+            <em>"This is a testimonial or quotation of someone important. Who? I don't know."</em>
         </div>
         <div class="author">
             <p>-Someone Important</p>
@@ -68,15 +68,17 @@
     </div>
     <div class="banner">
         <div class="CTA">
-            <p>Call to Action! It's time!</p>
-        </div>
-        <div class="CTAtext">
-            <p>Sign up and join now! You don't have much time. Only now, because at any moment, you may die.</p>
+            <div class="CTAhead">
+                <p>Call to Action! It's time!</p>
+            </div>    
+            <div class="CTAtext">
+                <p>Sign up and join now! You don't have much time. Only now, because at any moment, you may die.</p>
+            </div>
         </div>
         <div class="signup2">
             <p>Sign up</p>
         </div>
     </div>
-    <footer>Copyright @ Doherty Landing Pages 2023</footer>
 </body>
+<footer>Copyright @ Doherty Landing Pages 2023</footer>
 </html>
