edit css and add img files to index.html

--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
     </div>
     <div class="pictures">
         <div class="picture">
-            <img src="" alt="" description="" title="">
+            <img src="../Images/Logo Square.jpg" width="200px" height="200px" alt="some picture" description="some picture" title="picture">
         </div>
         <div class="picture">
-            <img src="" alt="" description="" title="">
+            <img src="../Images/Logo Square.jpg" width="200px" height="200px" alt="some picture" description="some picture" title="picture">
         </div>
         <div class="picture">
-            <img src="" alt="" description="" title="">
+            <img src="../Images/Logo Square.jpg" width="200px" height="200px" alt="some picture" description="some picture" title="picture">
         </div>
     </div>
     <div class="empty">
