--- a/index.html
+++ b/index.html
@@ -44,39 +44,42 @@
     <div class="section3">
         <h1>Heading Section 3</h1>
     </div>
-    <div class="pictures">
-        <div class="picture">
-            <img src="../Images/Logo Square.jpg" width="200px" height="200px" alt="some picture" description="some picture" title="picture">
-        </div>
-        <div class="picture">
-            <img src="../Images/Logo Square.jpg" width="200px" height="200px" alt="some picture" description="some picture" title="picture">
-        </div>
-        <div class="picture">
-            <img src="../Images/Logo Square.jpg" width="200px" height="200px" alt="some picture" description="some picture" title="picture">
-        </div>
+        <div class="block2">
+            <div class="pictures">
+                <div class="picture">
+                    <img src="../Images/Logo Square.jpg" width="200px" height="200px" alt="some picture" description="some picture" title="picture">
+                </div>
+                <div class="picture">
+                    <img src="../Images/Logo Square.jpg" width="200px" height="200px" alt="some picture" description="some picture" title="picture">
+                </div>
+                <div class="picture">
+                    <img src="../Images/Logo Square.jpg" width="200px" height="200px" alt="some picture" description="some picture" title="picture">
+                 </div>
+        </div>  
     </div>
-    <div class="empty">
-
-    </div>
-    <div class="quote">
-        <div class="testimonial">
-            <em>"This is a testimonial or quotation of someone important. Who? I don't know."</em>
-        </div>
-        <div class="author">
-            <p>-Someone Important</p>
-        </div>
-    </div>
-    <div class="banner">
-        <div class="CTA">
-            <div class="CTAhead">
-                <p>Call to Action! It's time!</p>
-            </div>    
-            <div class="CTAtext">
-                <p>Sign up and join now! You don't have much time. Only now, because at any moment, you may die.</p>
+    <div class="block3">
+        <div class="quote">
+            <div class="testimonial">
+                <em>"This is a testimonial or quotation of someone important. Who? I don't know."</em>
+            </div>
+            <div class="author">
+                <p>-Someone Important</p>
             </div>
         </div>
-        <div class="signup2">
-            <p>Sign up</p>
+    </div>
+    <div class="block4">
+    <div class="banner">
+            <div class="CTA">
+                <div class="CTAhead">
+                    <p>Call to Action! It's time!</p>
+                </div>    
+                <div class="CTAtext">
+                    <p>Sign up and join now! You don't have much time. Only now, because at any moment, you may die.</p>
+                </div>
+            </div>
+            <div class="signup2">
+                <p>Sign up</p>
+            </div>
         </div>
     </div>
 </body>
