add caption and edit img placement, test js

--- a/index.html
+++ b/index.html
@@ -48,13 +48,23 @@
             <div class="pictures">
                 <div class="picture">
                     <img src="../Images/Logo Square.jpg" width="200px" height="200px" alt="some picture" description="some picture" title="picture">
+                    <div class="caption">
+                        <p>Here is a caption for each picture. It will have something nice to say about the logo or something random.</p>
+                    </div>
                 </div>
                 <div class="picture">
                     <img src="../Images/Logo Square.jpg" width="200px" height="200px" alt="some picture" description="some picture" title="picture">
+                    <div class="caption">
+                        <p>Here is a caption for each picture. It will have something nice to say about the logo or something random.</p>
+                    </div>
                 </div>
                 <div class="picture">
                     <img src="../Images/Logo Square.jpg" width="200px" height="200px" alt="some picture" description="some picture" title="picture">
-                 </div>
+
+                    <div class="caption">
+                        <p>Here is a caption for each picture. It will have something nice to say about the logo or something random.</p>
+                    </div>
+                </div>
         </div>  
     </div>
     <div class="block3">
