--- a/index.html
+++ b/index.html
@@ -60,7 +60,12 @@
                 </div>
                 <div class="picture">
                     <img src="../Images/Logo Square.jpg" width="200px" height="200px" alt="some picture" description="some picture" title="picture">
-
+                    <div class="caption">
+                        <p>Here is a caption for each picture. It will have something nice to say about the logo or something random.</p>
+                    </div>
+                </div>
+                <div class="picture">
+                    <img src="../Images/Logo Square.jpg" width="200px" height="200px" alt="some picture" description="some picture" title="picture">
                     <div class="caption">
                         <p>Here is a caption for each picture. It will have something nice to say about the logo or something random.</p>
                     </div>
