edit header links

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
             </div>
             <div class="links">
                 <div class=link>
-                    <a href="../landing-page/products.html">Products</a>
+                    <a href="../odin-landing-page/products.html">Products</a>
                 </div>
                 <div class="link">
-                    <a href="../landing-page/about.html">About</a>
+                    <a href="../odin-landing-page/about.html">About</a>
                 </div>
                 <div class="link">
-                    <a href="../landing-page/contact.html">Contact Us</a>
+                    <a href="../odin-landing-page/contact.html">Contact Us</a>
                 </div>
         </div>
     </header>
